Thu May 25 03:53:47 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Removed AH_TEMPLATE for ACE_LACKS_TCP_H.  This was replaced
          with ACE_LACKS_NETINET_TCP_H long ago.

Wed May 24 22:19:43 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Repository.{h, inl, cpp}:

          Changed size arguments type to size_t in ctor, open,
          current_size, total_size and the corresponding members.
          ACE_Service_Repository_Iterator::next_ now starts from 0 instead
          of -1 to avoid warnings about signed/unsigned comparisons.

        * ace/Service_Gestalt.cpp:

          Reverted the change "Wed May 24 14:00:43 UTC 2006 Iliyan
          Jeliazkov <iliyan@ociweb.com>", since now the
          Service_repository::instance() takes size_t argument.

        * performance-tests/Synch-Benchmarks/Base_Test/Synch_Benchmarks_Base_Test.mpc:
        * performance-tests/Synch-Benchmarks/Perf_Test/Synch_Benchmarks_Perf_Test.mpc:

          Fixed and error whereby the DLL's generated by this two project
          files did not match the name used in the svc configuration
          files, causing the test to crash because of missing DLL.

Wed May 24 13:08:08 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Message_Queue.h: Added #include "ace/Thread_Mutex.h" on platforms
          that have ACE_Message_Queue_NT available; that class has a
          ACE_Thread_Mutex member so the include is needed to see the class.
          Thanks to Guy Peleg <guype at amdocs dot com> for this fix.

Wed May 24 17:39:47 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Remote_Tokens.cpp (request_reply): Added a helpful error
          message to make it easy to track down problems with TSS.

Wed May 24 17:22:31 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Change feature test to define ACE_LACKS_NATIVE_STRPTIME if